# mind-wallet

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy-pages.yml
docs/: book.toml
docs/scripts/: generate-planning-artifacts.sh
docs/src/: SUMMARY.md  introduction.md  official-restore-tests.md  profile.md  restore-workflows.md  security.md  usage.md
src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  wasm.rs
src/core/: kdf.rs  mod.rs  profile.rs
src/core/monero/: mod.rs
tests/: cli_scaffold.rs  determinism.rs  kdf_profile.rs  monero_cli_restore.rs  monero_outputs.rs  wasm_parity.rs  wasm_parity_wasm32.rs
tests/common/: mod.rs
web/: CNAME  README.md  index.html  main.js  mind-wallet.css
